deploy: 74e5dbd8340186a4d5a7e9021df97ed6d1b3fc39

--- a/about/index.html
+++ b/about/index.html
@@ -11,29 +11,31 @@
     </div>
 </header>
 
-  <div id="page-body">
-    <div class="content">
-      <div id="white-box"></div>
-      <div class="about-box">
-        <div class="image-container">
-          <img src="/images/macaw.jpg" alt="Image">
+<div id="page-body">
+	<div class="content">
+		<div id="white-box"></div>
+        <div id="transparent-box" style="height: 20px;"></div>
+        <div class="page-content">
+            <div class="about-box">
+                <div class="image-container">
+                    <img src="/images/macaw.jpg" alt="Image">
+                </div>
+                <div id="personal-info">
+                </div>
+                <div class="link-container">
+                    <a href="mailto:zhuyongqi9@gmail.com">
+                        <img class="icon-link" src="/images/email.png" alt="Image">
+                    </a>
+                    <a href="https://twitter.com/Kirin43109156">
+                        <img class="icon-link" src="/images/twitter.png" alt="Image">
+                    </a>
+                </div>
+		    </div>
         </div>
-        <div id="personal-info">
-        </div>
-        <div class="link-container">
-          <a href="mailto:zhuyongqi9@gmail.com">
-            <img class="icon-link" src="/images/email.png" alt="Image">
-          </a>
-          <a href="https://twitter.com/Kirin43109156">
-            <img class="icon-link" src="/images/twitter.png" alt="Image">
-          </a>
-        </div>
-      </div>
+	</div>
+</div>
 
-    </div>
-  </div>
-
- <footer id="page-footer" >
+<footer id="page-footer" >
 	<div id="time-box">  
 		<div id="current-utc-time" id="page-footer-text"></div>
 	</div>
@@ -55,26 +57,26 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 
 <script>
-  let personalInfoContentStr = marked.parse(
-"This is kirin, an interest-driven developer and worked as a software enginner.\n \
-- Interested in system programming now, welcome to discuss 《csapp》 with me \n\
-- Graduated from NUIST 2022 \n\
-- Familiar with microcontroller and web-backend projects...\n"
-);
+	let personalInfoContentStr = marked.parse(
+		"This is kirin, an interest-driven developer and worked as a software enginner.\n \
+		- Interested in system programming now, welcome to discuss 《csapp》 with me \n\
+		- Graduated from NUIST 2022 \n\
+		- Familiar with microcontroller and web-backend projects...\n"
+	);
 
-  let personInfoContent = new DOMParser().parseFromString(personalInfoContentStr, 'text/html');
+	let personInfoContent = new DOMParser().parseFromString(personalInfoContentStr, 'text/html');
 
-  let personalInfo = document.getElementById('personal-info');
-  var bodyChildren = Array.from(personInfoContent.body.childNodes);
-  console.log(bodyChildren)
+	let personalInfo = document.getElementById('personal-info');
+	var bodyChildren = Array.from(personInfoContent.body.childNodes);
+	console.log(bodyChildren)
 
-  bodyChildren.forEach(function(child) {
-    personalInfo.appendChild(child);
-  });
+	bodyChildren.forEach(function (child) {
+		personalInfo.appendChild(child);
+	});
 
 
 </script>
