--- a/arduino/index.html
+++ b/arduino/index.html
@@ -13,7 +13,8 @@
 	<div class="content">
 		<link rel="stylesheet" href="/css/post.css">
 
-<div style="opacity: 0; height: 80px; z-index: 10;"></div>
+<div id="white-box"></div>
+<div id="transparent-box" style="height: 20px;"></div>
 
 <div id="url-element"></div>
 
@@ -23,8 +24,6 @@
 	</div>
 	
 </div>
-
-<script src="https://threejs.org/build/three.js"></script>
 
 
 
